[package]
name = "password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.0"
clipboard = "0.5"
native-windows-gui = "1.0.12"
